@@ -1098,6 +1098,190 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+comment|/** Uses variables with $ */
+DECL|method|testDollarVariable
+specifier|public
+name|void
+name|testDollarVariable
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Expression
+name|expr
+init|=
+name|JavascriptCompiler
+operator|.
+name|compile
+argument_list|(
+literal|"$0+$score"
+argument_list|)
+decl_stmt|;
+name|SimpleBindings
+name|bindings
+init|=
+operator|new
+name|SimpleBindings
+argument_list|()
+decl_stmt|;
+name|bindings
+operator|.
+name|add
+argument_list|(
+operator|new
+name|SortField
+argument_list|(
+literal|"$0"
+argument_list|,
+name|SortField
+operator|.
+name|Type
+operator|.
+name|SCORE
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|bindings
+operator|.
+name|add
+argument_list|(
+operator|new
+name|SortField
+argument_list|(
+literal|"$score"
+argument_list|,
+name|SortField
+operator|.
+name|Type
+operator|.
+name|SCORE
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Sort
+name|sort
+init|=
+operator|new
+name|Sort
+argument_list|(
+name|expr
+operator|.
+name|getSortField
+argument_list|(
+name|bindings
+argument_list|,
+literal|true
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|Query
+name|query
+init|=
+operator|new
+name|TermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"body"
+argument_list|,
+literal|"contents"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|TopFieldDocs
+name|td
+init|=
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|query
+argument_list|,
+literal|null
+argument_list|,
+literal|3
+argument_list|,
+name|sort
+argument_list|,
+literal|true
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|3
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|FieldDoc
+name|d
+init|=
+operator|(
+name|FieldDoc
+operator|)
+name|td
+operator|.
+name|scoreDocs
+index|[
+name|i
+index|]
+decl_stmt|;
+name|float
+name|expected
+init|=
+literal|2
+operator|*
+name|d
+operator|.
+name|score
+decl_stmt|;
+name|float
+name|actual
+init|=
+operator|(
+operator|(
+name|Double
+operator|)
+name|d
+operator|.
+name|fields
+index|[
+literal|0
+index|]
+operator|)
+operator|.
+name|floatValue
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|expected
+argument_list|,
+name|actual
+argument_list|,
+name|CheckHits
+operator|.
+name|explainToleranceDelta
+argument_list|(
+name|expected
+argument_list|,
+name|actual
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 comment|/** tests expression referring to another expression */
 DECL|method|testExpressionRefersToExpression
 specifier|public
